--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>CadastroLembretesJobs</title>
+  <title>Cadastro de Lembretes</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"> -->
 
-  <!-- <link rel="shortcut icon" href="./assets/carrinho-icone.png" type="image/x-icon" /> -->
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
